Формирование класса, добавление всех нужных атрибутов и методов, добавлеие файла.

--- a/5_oop_2.vcxproj.filters
+++ b/5_oop_2.vcxproj.filters
@@ -27,4 +27,9 @@
       <Filter>Файлы ресурсов</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="file1.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
