Добавление класса Mixture

--- a/5_oop_2.vcxproj
+++ b/5_oop_2.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="default.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mix.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
