--- a/5_oop_2.vcxproj.filters
+++ b/5_oop_2.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="test.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
+    <ClCompile Include="mix.cpp">
+      <Filter>Файлы ресурсов</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h">
