Добавление класса Empirical

--- a/5_oop_2.vcxproj
+++ b/5_oop_2.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="default.cpp" />
+    <ClCompile Include="emp.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mix.cpp" />
     <ClCompile Include="test.cpp" />
